Added input-text component. Added some controllers

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -14,3 +14,7 @@ html, body {
 .navbar-default {
 	background-image: url("../images/gui/grey/grey.png");
 }
+
+.plotted {
+	background-image: url("../images/gui/tiny_grid/tiny_grid.png");
+}
