--- a/app/templates/view_controllers.hbs
+++ b/app/templates/view_controllers.hbs
@@ -7,7 +7,9 @@
                 </div>
                 <ul class="list-group">
                     {{#each item in controller}}
-                        <li class="list-group-item">{{item.name}}</li>
+                        <li class="list-group-item">
+                            {{#link-to "viewController" item}}{{item.name}}{{/link-to}}
+                        </li>
                     {{/each}}
                 </ul>
                 <div class="panel-footer">
@@ -15,8 +17,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-9">
-            {{outlet}}
-        </div>
+        
+        {{outlet}}
     </div>
 </div>
