--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -1,5 +1,5 @@
 <div class="col-md-3">
-	<div class="panel panel-default">
+	<div class="panel panel-info">
 	    <div class="panel-heading">
 	        <h3 class="panel-title">{{name}}</h3>
 	    </div>
