--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -7,7 +7,11 @@
 	    	{{input-text label="Name" value=name action='acceptChanges'}}
 	    </div>
 	    <div class="panel-footer">
-	        ciao
+	    	 <div class="btn-group">
+            <button type="button" class="btn btn-default" {{action "deleteViewController"}}>
+              <i class="fa fa-trash-o"></i> 
+            </button>
+          </div>
 	    </div>
 	</div>
 </div>
