Changed uiControl in uiControlTemplate

--- a/app/templates/view_controllers.hbs
+++ b/app/templates/view_controllers.hbs
@@ -42,8 +42,8 @@
             UIControls
         </div>
         <div class="panel-body">
-          {{#each controllers.uiControls}}
-            {{view App.UiControlView}}
+          {{#each controllers.uiControlTemplates}}
+            {{view App.UiControlTemplateView}}
           {{/each}}
         </div>
       </div>
