Improvements in ui controls templates

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -18,3 +18,8 @@ html, body {
 .plotted {
 	background-image: url("../images/gui/tiny_grid/tiny_grid.png");
 }
+
+.control-ui-picker {
+  height: 50px;
+  width: 50px;
+}
