--- a/app/templates/view_controller.hbs
+++ b/app/templates/view_controller.hbs
@@ -4,7 +4,7 @@
 	        <h3 class="panel-title">{{name}}</h3>
 	    </div>
 	    <div class="panel-body plotted">
-
+	    	{{view App.PhoneView}}
 	    </div>
 	    <div class="panel-footer">
 	        ciaos
