--- a/app/templates/view_controllers.hbs
+++ b/app/templates/view_controllers.hbs
@@ -39,7 +39,7 @@
 
       <div class="panel panel-default">
         <div class="panel-heading">
-            UIControls
+            UIControls (Drag and drop)
         </div>
         <div class="panel-body">
           {{#each controllers.uiControlTemplates itemController="uiControlTemplate"}}
