--- a/app/templates/view_controller.hbs
+++ b/app/templates/view_controller.hbs
@@ -2,7 +2,7 @@
 	<div class="panel panel-primary">
 	    <div class="panel-heading">
         <strong class="panel-title">{{name}}</strong>
-        <div class="col-xs-3 input-group pull-right">
+        <div class="col-xs-4 input-group pull-right">
         	<span class="input-group-btn">
       			<button class="btn btn-default" {{action 'decreaseZoom'}}><i class="fa fa-search-minus"></i> </button>
       		</span>
@@ -14,7 +14,7 @@
       	<div class="clearfix"></div>
 	    </div>
 	    <div class="panel-body plotted">
-	    	{{view App.PhoneView}}
+	    	{{view App.DeviceView}}
 	    </div>
 	    <div class="panel-footer">
 	        ciaos
