--- a/app/templates/components/input-text.hbs
+++ b/app/templates/components/input-text.hbs
@@ -4,6 +4,7 @@
 		value=value
 		class="form-control"
 		placeholder=label
+    type=type
 		viewName="textField"
 		focus-out="acceptChanges"
 		insert-newline="acceptChanges"}}
