--- a/app/templates/control_button/index.hbs
+++ b/app/templates/control_button/index.hbs
@@ -6,6 +6,8 @@
       <div class="panel-body">
         {{input-text label="Name" value=name action='acceptChanges'}}
         {{input-text label="Title" value=title action='acceptChanges'}}
+        {{input-text label="Position X [px]" value=posX action='acceptChanges' type="number"}}
+        {{input-text label="Position Y [px]" value=posY action='acceptChanges' type="number"}}
       </div>
       <div class="panel-footer">
          <div class="btn-group">
