Fixed some grunt problems

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -1,4 +1,5 @@
 $icon-font-path: "fonts/"; // Change the path to the fonts
+$fa-font-path: "fonts";
 @import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap";
 @import "font-awesome/scss/font-awesome";
 
