Improved selection of controls, moved ui-controls from button to a proper location (ui-control)

--- a/app/templates/views/button_view.hbs
+++ b/app/templates/views/button_view.hbs
@@ -1,1 +1,1 @@
-{{#link-to "controlButton" this}}{{title}}{{/link-to}}
+{{title}}{{#link-to "controlButton" this tagName="div" class="inner-control"}}{{/link-to}}
