--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -64,13 +64,29 @@ html, body {
 
 
 /* Controls */
-.control-button {
+
+.ui-control {
   position: absolute;
 }
 
-.control-button a.active {
-  border: dashed 1px #007aff;
+.inner-control {
+  position: absolute;
+  /*top: -10%;
+  right: -10%;
+  width: 120%;
+  height: 120%;*/
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
 }
+
+.inner-control.active {
+  border: dashed 1px #007aff;
+  border-radius: 5px;
+}
+
+
 
 .control-button.ios {
   font: 16px -apple-system-font, ".Helvetica NeueUI", "Helvetica Neue", sans-serif;
