--- a/app/templates/control_button/index.hbs
+++ b/app/templates/control_button/index.hbs
@@ -18,7 +18,25 @@
             {{input-text label="Position X [px]" value=posX action='acceptChanges' type="number"}}
             {{input-text label="Position Y [px]" value=posY action='acceptChanges' type="number"}}
           </div>
-          <div class="tab-pane fade" id="profile">...</div>
+          <div class="tab-pane fade" id="profile">
+            <div class="form-group">
+              <label>Align with parent</label>
+              <div class="btn-group">
+                <label {{bind-attr class=":btn :btn-default alignParentStart:active"}}>
+                  {{input type="checkbox" checked=alignParentStart class="hidden"}} <i class="fa fa-chevron-left"></i>
+                </label>
+                <label {{bind-attr class=":btn :btn-default alignParentTop:active"}}>
+                  {{input type="checkbox" checked=alignParentTop class="hidden"}} <i class="fa fa-chevron-up"></i>
+                </label>
+                <label {{bind-attr class=":btn :btn-default alignParentBottom:active"}}>
+                  {{input type="checkbox" checked=alignParentBottom class="hidden"}} <i class="fa fa-chevron-down"></i>
+                </label>
+                <label {{bind-attr class=":btn :btn-default alignParentEnd:active"}}>
+                  {{input type="checkbox" checked=alignParentEnd class="hidden"}} <i class="fa fa-chevron-right"></i>
+                </label>
+              </div>
+            </div>
+          </div>
           <div class="tab-pane fade" id="messages">...</div>
           <div class="tab-pane fade" id="settings">...</div>
         </div>
