--- a/app/templates/control_button/index.hbs
+++ b/app/templates/control_button/index.hbs
@@ -6,8 +6,8 @@
       <div class="panel-body">
         <ul class="nav nav-tabs">
           <li class="active"><a href="#home" data-toggle="tab"><i class="fa fa-pencil"></i></a></li>
-          <li><a href="#profile" data-toggle="tab"><i class="fa fa-sitemap"></i></a></li>
-          <li><a href="#messages" data-toggle="tab"><i class="fa fa-tachometer"></i></a></li>
+          <li><a href="#profile" data-toggle="tab"><i class="fa fa-arrows"></i></a></li>
+          <li><a href="#messages" data-toggle="tab"><i class="fa fa-sitemap"></i></a></li>
           <li><a href="#settings" data-toggle="tab"><i class="fa fa-cogs"></i></a></li>
         </ul>
 
@@ -15,8 +15,6 @@
           <div class="tab-pane fade in active" id="home">
             {{input-text label="Name" value=name action='acceptChanges'}}
             {{input-text label="Title" value=title action='acceptChanges'}}
-            {{input-text label="Position X [px]" value=posX action='acceptChanges' type="number"}}
-            {{input-text label="Position Y [px]" value=posY action='acceptChanges' type="number"}}
           </div>
           <div class="tab-pane fade" id="profile">
             <div class="form-group">
@@ -36,6 +34,8 @@
                 </label>
               </div>
             </div>
+            {{input-text label="Position X [px]" value=posX action='acceptChanges' type="number"}}
+            {{input-text label="Position Y [px]" value=posY action='acceptChanges' type="number"}}
           </div>
           <div class="tab-pane fade" id="messages">...</div>
           <div class="tab-pane fade" id="settings">...</div>
