--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -56,6 +56,7 @@ html, body {
 }
 
 .device-view .device-screen-view {
+  overflow: hidden;
   position: relative;
   background-color: #fff;
   width: 100%;
