--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -86,6 +86,11 @@ html, body {
   height: 100%;
 }
 
+.ui-control .expanded {
+  width: 100%;
+  height: 100%;
+}
+
 .inner-control.active {
   border: dashed 1px #007aff;
   border-radius: 5px;
