--- a/app/templates/views/container_view.hbs
+++ b/app/templates/views/container_view.hbs
@@ -1,1 +1,5 @@
-{{title}}{{#link-to "controlContainer" this tagName="div" class="inner-control"}}{{/link-to}}
+{{#link-to "controlContainer" this tagName="div" class="inner-control"}}
+{{/link-to}}
+{{#each uiControls}}
+  {{view App.UiControlView}}
+{{/each}}
