--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -98,6 +98,9 @@ html, body {
 }
 
 
+.control-button {
+  overflow: hidden;
+}
 
 .control-button.ios {
   font: 16px -apple-system-font, ".Helvetica NeueUI", "Helvetica Neue", sans-serif;
@@ -112,6 +115,7 @@ html, body {
 .control-container {
   border: dashed 1px #ccc;
   border-radius: 5px;
+  overflow: hidden;
 }
 
 /* Drag & Drop */
