Added click in screen view

--- a/app/templates/views/device_screen_view.hbs
+++ b/app/templates/views/device_screen_view.hbs
@@ -1,3 +1,4 @@
+{{#link-to "viewController" model tagName="div" class="expanded"}}{{/link-to}}
 {{#each uiControls}}
   {{view App.UiControlView}}
 {{/each}}
