Fixed bug in nested conteiners

--- a/app/templates/views/device_screen_view.hbs
+++ b/app/templates/views/device_screen_view.hbs
@@ -1,4 +1,4 @@
-{{#link-to "viewController" model tagName="div" class="expanded"}}{{/link-to}}
+{{#link-to "viewController" model tagName="div" class="expanded-area"}}{{/link-to}}
 {{#each uiControls}}
   {{view App.UiControlView}}
 {{/each}}
