--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -63,6 +63,14 @@ html, body {
   height: 100%;
 }
 
+.device-view .device-screen-view .expanded-area {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 
 /* Controls */
 
@@ -82,7 +90,7 @@ html, body {
   width: 120%;
   height: 120%;*/
   top: 0;
-  right: 0;
+  left: 0;
   width: 100%;
   height: 100%;
 }
@@ -113,6 +121,9 @@ html, body {
 }
 
 .control-container {
+  position: relative;
+  top: 0;
+  left: 0;
   border: dashed 1px #ccc;
   border-radius: 5px;
   overflow: hidden;
