Added some components for inputs

--- a/app/templates/control_button/index.hbs
+++ b/app/templates/control_button/index.hbs
@@ -34,6 +34,7 @@
                 </label>
               </div>
             </div>
+            {{input-select label="Align with top" content=siblings optionLabelPath="content.name" optionValuePath="content" selection=alignTop prompt="Select sibling"}}
             {{input-text label="Position X [px]" value=posX action='acceptChanges' type="number"}}
             {{input-text label="Position Y [px]" value=posY action='acceptChanges' type="number"}}
           </div>
