--- a/app/templates/control_button/index.hbs
+++ b/app/templates/control_button/index.hbs
@@ -35,6 +35,7 @@
               </div>
             </div>
             {{input-select label="Align with top" content=siblings optionLabelPath="content.name" optionValuePath="content" selection=alignTop prompt="Select sibling"}}
+            {{input-select label="Align with start" content=siblings optionLabelPath="content.name" optionValuePath="content" selection=alignStart prompt="Select sibling"}}
             {{input-text label="Position X [px]" value=posX action='acceptChanges' type="number"}}
             {{input-text label="Position Y [px]" value=posY action='acceptChanges' type="number"}}
           </div>
