Added a lot of controls constraints.

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -78,6 +78,10 @@ html, body {
   position: absolute;
 }
 
+.ui-control:hover {
+  cursor: pointer;
+}
+
 .ui-control.is-moving {
   z-index: 999;
   cursor: move;
