--- a/app/templates/control_button/index.hbs
+++ b/app/templates/control_button/index.hbs
@@ -17,29 +17,7 @@
             {{input-text label="Title" value=title action='acceptChanges'}}
           </div>
           <div class="tab-pane fade" id="profile">
-            <div class="form-group">
-              <label>Align with parent</label>
-              <div class="btn-group">
-                <label {{bind-attr class=":btn :btn-default alignParentStart:active"}}>
-                  {{input type="checkbox" checked=alignParentStart class="hidden"}} <i class="fa fa-chevron-left"></i>
-                </label>
-                <label {{bind-attr class=":btn :btn-default alignParentTop:active"}}>
-                  {{input type="checkbox" checked=alignParentTop class="hidden"}} <i class="fa fa-chevron-up"></i>
-                </label>
-                <label {{bind-attr class=":btn :btn-default alignParentBottom:active"}}>
-                  {{input type="checkbox" checked=alignParentBottom class="hidden"}} <i class="fa fa-chevron-down"></i>
-                </label>
-                <label {{bind-attr class=":btn :btn-default alignParentEnd:active"}}>
-                  {{input type="checkbox" checked=alignParentEnd class="hidden"}} <i class="fa fa-chevron-right"></i>
-                </label>
-              </div>
-            </div>
-            {{input-select label="Align with top" content=siblings optionLabelPath="content.name" optionValuePath="content" selection=alignTop prompt="Select sibling"}}
-            {{input-select label="Align with bottom" content=siblings optionLabelPath="content.name" optionValuePath="content" selection=alignBottom prompt="Select sibling"}}
-            {{input-select label="Align with start" content=siblings optionLabelPath="content.name" optionValuePath="content" selection=alignStart prompt="Select sibling"}}
-            {{input-select label="Align with end" content=siblings optionLabelPath="content.name" optionValuePath="content" selection=alignEnd prompt="Select sibling"}}
-            {{input-text label="Position X [px]" value=posX action='acceptChanges' type="number"}}
-            {{input-text label="Position Y [px]" value=posY action='acceptChanges' type="number"}}
+            {{partial "partials/ui_control_position"}}
           </div>
           <div class="tab-pane fade" id="messages">
             {{input-text label="Width [px]" value=width action='acceptChanges' type="number"}}
