Bug fixes in moveable mixin

--- a/app/templates/control_button/index.hbs
+++ b/app/templates/control_button/index.hbs
@@ -20,8 +20,8 @@
             {{partial "partials/ui_control_position"}}
           </div>
           <div class="tab-pane fade" id="messages">
-            {{input-text label="Width [px]" value=width action='acceptChanges' type="number"}}
-            {{input-text label="Height [px]" value=height action='acceptChanges' type="number"}}
+            {{input-text label="Width [dp]" value=width action='acceptChanges' type="number"}}
+            {{input-text label="Height [dp]" value=height action='acceptChanges' type="number"}}
           </div>
           <div class="tab-pane fade" id="settings">...</div>
         </div>
