Added tree structure in view controller

--- a/app/templates/control_container/index.hbs
+++ b/app/templates/control_container/index.hbs
@@ -6,8 +6,8 @@
       <div class="panel-body">
         <ul class="nav nav-tabs">
           <li class="active"><a href="#home" data-toggle="tab"><i class="fa fa-pencil"></i></a></li>
-          <li><a href="#profile" data-toggle="tab"><i class="fa fa-arrows"></i></a></li>
-          <li><a href="#messages" data-toggle="tab"><i class="fa fa-expand"></i></a></li>
+          <li><a href="#position" data-toggle="tab"><i class="fa fa-arrows"></i></a></li>
+          <li><a href="#dimension" data-toggle="tab"><i class="fa fa-expand"></i></a></li>
           <li><a href="#settings" data-toggle="tab"><i class="fa fa-cogs"></i></a></li>
         </ul>
 
@@ -16,10 +16,10 @@
             {{input-text label="Name" value=name action='acceptChanges'}}
             {{input-text label="Title" value=title action='acceptChanges'}}
           </div>
-          <div class="tab-pane fade" id="profile">
+          <div class="tab-pane fade" id="position">
             {{partial "partials/ui_control_position"}}
           </div>
-          <div class="tab-pane fade" id="messages">
+          <div class="tab-pane fade" id="dimension">
             {{input-text label="Width [px]" value=width action='acceptChanges' type="number"}}
             {{input-text label="Height [px]" value=height action='acceptChanges' type="number"}}
           </div>
