--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -2,6 +2,7 @@ $icon-font-path: "fonts/"; // Change the path to the fonts
 $fa-font-path: "fonts";
 @import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap";
 @import "font-awesome/scss/font-awesome";
+@import "../styles/treeview";
 
 /* Put your CSS here */
 html, body {
