--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -4,7 +4,26 @@
 	        <h3 class="panel-title">{{name}}</h3>
 	    </div>
 	    <div class="panel-body">
-	    	{{input-text label="Name" value=name action='acceptChanges'}}
+        <ul class="nav nav-tabs">
+          <li class="active"><a href="#home" data-toggle="tab"><i class="fa fa-pencil"></i></a></li>
+          <li><a href="#hierarchy" data-toggle="tab"><i class="fa fa-sitemap"></i></a></li>
+        </ul>
+
+        <div class="tab-content">
+          <div class="tab-pane fade in active" id="home">
+            {{input-text label="Name" value=name action='acceptChanges'}}
+          </div>
+          <div class="tab-pane fade" id="hierarchy">
+            <div class="tree">
+              <ul>
+                <li><span><i class="fa fa-mobile"></i> {{name}}</span></li>
+                <ul>
+                  {{partial "partials/tree_container"}}
+                </ul>
+              </ul>
+            </div>
+          </div>
+        </div>
 	    </div>
 	    <div class="panel-footer">
 	    	 <div class="btn-group">
