--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -2,9 +2,9 @@ $icon-font-path: "fonts/"; // Change the path to the fonts
 $fa-font-path: "fonts";
 @import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap";
 @import "font-awesome/scss/font-awesome";
-@import "../styles/treeview";
+@import "fonts";
+@import "treeview";
 
-/* Put your CSS here */
 html, body {
     margin: 30px 0;
 }
@@ -39,6 +39,8 @@ html, body {
   -webkit-transition: transform 0.1s;
 }
 
+
+/****** Device views ******/
 .device-view {
   margin-left: auto;
   margin-right: auto;
@@ -54,6 +56,16 @@ html, body {
   width: 370px;
   height: 777px;
   padding: 114px 27px 107px 31px;
+}
+
+.device-view.android.Nexus5 {
+  background-image: url("../images/devices/android/nexus_5.png");
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: 100%;
+  width: 395px;
+  height: 780px;
+  padding: 67px 21px 89px 21px;
 }
 
 .device-view .device-screen-view {
@@ -132,6 +144,11 @@ html, body {
   border: dashed 1px #ccc;
   border-radius: 5px;
   overflow: hidden;
+}
+
+/*** Ui Controls -> Android ***/
+.ui-control .android {
+  font: 16px "Roboto", ".Helvetica NeueUI", "Helvetica Neue", sans-serif;
 }
 
 /* Drag & Drop */
