--- a/app/templates/views/button_view.hbs
+++ b/app/templates/views/button_view.hbs
@@ -1,1 +1,1 @@
-{{title}}{{#link-to "controlButton" this tagName="div" class="inner-control"}}{{/link-to}}
+<div class="control-content">{{title}}{{#link-to "controlButton" this tagName="div" class="inner-control"}}</div>{{/link-to}}
