--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -84,6 +84,15 @@ html, body {
   height: 100%;
 }
 
+/* Menus */
+.app-menu.ios {
+  position: absolute;
+  background-color: #f8f8f8;
+  width: 100%;
+  height: 48px;
+  border-top: solid 1px #b2b2b2;
+  bottom: 0;
+}
 
 /* Controls */
 
