--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -4,6 +4,7 @@ $fa-font-path: "fonts";
 @import "font-awesome/scss/font-awesome";
 @import "fonts";
 @import "treeview";
+@import "variables";
 
 html, body {
     margin: 30px 0;
@@ -85,14 +86,7 @@ html, body {
 }
 
 /* Menus */
-.app-menu.ios {
-  position: absolute;
-  background-color: #f8f8f8;
-  width: 100%;
-  height: 48px;
-  border-top: solid 1px #b2b2b2;
-  bottom: 0;
-}
+
 
 /* Controls */
 
@@ -145,7 +139,7 @@ html, body {
 
 .control-button.ios {
   font: 16px -apple-system-font, ".Helvetica NeueUI", "Helvetica Neue", sans-serif;
-  color: #007aff;
+  color: $ios-primary-color;
   padding: 5px;
 }
 
@@ -161,6 +155,41 @@ html, body {
   border-radius: 5px;
   overflow: hidden;
 }
+
+
+/*** Menus -> iOS ***/
+.app-menu.ios {
+  position: absolute;
+  display: flex;
+  flex-flow: row no-wrap;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
+  background-color: #f8f8f8;
+  width: 100%;
+  height: 48px;
+  border-top: solid 1px #b2b2b2;
+  bottom: 0;
+}
+
+.app-menu-item.ios {
+  position: relative;
+  color: $ios-primary-color;
+  flex: 0 1 auto;
+  align-self: auto;
+  min-width: 0;
+  min-height: auto;
+}
+
+.app-menu-item.ios .control-content {
+  /*position: relative;
+  font-size: 11px;
+  top: 14px;*/
+}
+
+
+/*** Ui Controls -> iOS ***/
+
 
 /*** Ui Controls -> Android ***/
 .ui-control .android {
