--- a/app/templates/app_menu_item/index.hbs
+++ b/app/templates/app_menu_item/index.hbs
@@ -11,7 +11,7 @@
           <li><a href="#dimension" data-toggle="tab"><i class="fa fa-expand"></i></a></li>
           <li><a href="#settings" data-toggle="tab"><i class="fa fa-cogs"></i></a></li>
         </ul>
-
+        {{#link-to 'appMenu' parentMenu}} menuuuuu{{/link-to}}
         <div class="tab-content">
           <div class="tab-pane fade in active" id="home">
             {{input-text label="Name" value=name action='acceptChanges'}}
