--- a/app/templates/views/menu_item_view.hbs
+++ b/app/templates/views/menu_item_view.hbs
@@ -1,1 +1,1 @@
-<div class="control-content">{{title}}{{#link-to "menuItem" this tagName="div" class="inner-control"}}</div>{{/link-to}}
+<div class="control-content">{{title}}{{#link-to "appMenuItem" this tagName="div" class="inner-control"}}</div>{{/link-to}}
