Added remove command for menu items

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -14,6 +14,10 @@ html, body {
 	/* background-image: url("../images/gui/tiny_grid/tiny_grid.png"); */
 }
 
+.spacer {
+  margin-top: 15px;
+}
+
 .navbar-default {
 	background-image: url("../images/gui/grey/grey.png");
 }
