--- a/app/templates/view_controller/index.hbs
+++ b/app/templates/view_controller/index.hbs
@@ -31,6 +31,11 @@
               <i class="fa fa-trash-o"></i> 
             </button>
           </div>
+          <div class="btn-group pull-right">
+            {{#link-to 'appMenu' application.menu class="btn btn-default"}}
+              <i class="fa fa-pencil-square-o"></i> Edit menu
+            {{/link-to}}
+          </div>  
 	    </div>
 	</div>
 </div>
