--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -51,6 +51,8 @@ html, body {
   margin-right: auto;
   -moz-transform-origin: 0 0;
   -webkit-transform-origin: 0 0;
+  transition: transform 0.3s ease-out;
+  transition: -webkit-transform 0.3s ease-out;
 }
 
 .device-view.ios.iPhone5s {
@@ -215,13 +217,19 @@ html, body {
   width: 100%;
   top: 25px;
   left: 0;
-  height: 43px;
+  height: 41px;
   line-height: 43px;
   background-color: #dddddd;
-  border-bottom: solid 1px #d2d2d2, solid 1px #b7b7b7;
+  border-bottom: solid 1px #b7b7b7;
   background-repeat: no-repeat;
   padding-left: 8px;
 }
+
+.android .device-screen-view .action-bar:before {
+  border-bottom: solid 1px #d2d2d2;
+  padding-bottom: 1px;
+}
+
 .android .device-screen-view .status-bar {
   position: absolute;
   width: 100%;
@@ -306,7 +314,7 @@ html, body {
   border-top: solid 1px #dfdfdf;
   border-left: solid 1px #c8c8c8;
   border-right: solid 1px #c8c8c8;
-  border-radius: 1px;
+  border-radius: 2px;
   box-shadow: 0px 1px 1px 0 #c4c4c4;
   text-align: center;
 }
