--- a/app/templates/control_container/index.hbs
+++ b/app/templates/control_container/index.hbs
@@ -22,6 +22,7 @@
           <div class="tab-pane fade" id="dimension">
             {{input-text label="Width [px]" value=width action='acceptChanges' type="number"}}
             {{input-text label="Height [px]" value=height action='acceptChanges' type="number"}}
+            {{partial "partials/ui_control_dimension"}}
           </div>
           <div class="tab-pane fade" id="settings">...</div>
         </div>
