--- a/app/templates/partials/_ui_control_dimension.hbs
+++ b/app/templates/partials/_ui_control_dimension.hbs
@@ -1,3 +1,7 @@
+<!-- Dimension -->
+{{input-text label="Width [dp]" value=width action='acceptChanges' type="number"}}
+{{input-text label="Height [dp]" value=height action='acceptChanges' type="number"}}
+
 <!-- Padding -->
 <p>Padding</p>
 {{input-text label="Top" value=paddingTop action='acceptChanges' type="number"}}
