--- a/app/templates/views/ui_label_view.hbs
+++ b/app/templates/views/ui_label_view.hbs
@@ -1,1 +1,2 @@
-<div class="control-content">{{title}}{{#link-to "controlLabel" this tagName="div" class="inner-control"}}</div>{{/link-to}}
+<div class="control-content">{{title}}</div>
+{{#link-to "controlLabel" this tagName="div" class="inner-control"}}{{/link-to}}
