Added placeholder in editText

--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -176,6 +176,10 @@ html, body {
   text-overflow: ellipsis;
 }
 
+.ios .control-edit-text .control-content .placeholder {
+  color: $ios-placeholder-color;
+}
+
 
 /*** Menus -> iOS ***/
 .app-menu.ios {
