--- a/app/templates/control_edit_text/index.hbs
+++ b/app/templates/control_edit_text/index.hbs
@@ -14,6 +14,7 @@
           <div class="tab-pane fade in active" id="home">
             {{input-text label="Name" value=name action='acceptChanges'}}
             {{input-text label="Title" value=title action='acceptChanges'}}
+            {{input-text label="Placeholder" value=placeholder action='acceptChanges'}}
           </div>
           <div class="tab-pane fade" id="position">
             {{partial "partials/ui_control_position"}}
