--- a/app/templates/views/ui_edit_text_view.hbs
+++ b/app/templates/views/ui_edit_text_view.hbs
@@ -1,2 +1,8 @@
-<div class="control-content">{{title}}</div>
+<div class="control-content">
+  {{#if title}}
+    <span class="title">{{title}}</span>
+  {{else}}
+    <span class="placeholder">{{placeholder}}</span>
+  {{/if}}
+</div>
 {{#link-to "controlEditText" this tagName="div" class="inner-control"}}{{/link-to}}
