Added editText to android too

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -1,3 +1,5 @@
+$android-normal-edit-text-color: #a9a9a9;
+
 $ios-primary-color: #007aff;
 $ios-border-color: #c8c8c8;
 $ios-placeholder-color: #c7c7cd;
